# datasetsforecast

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  THIRD_PARTY_LICENSES.md  docs.json  environment.yml  evaluation.html  evaluation.html.mdx  favorita.html  favorita.html.mdx  favorita.mdx  hierarchical.html  hierarchical.html.mdx  hierarchical.mdx  index.html  index.html.mdx  index.mdx  long_horizon.html  long_horizon.html.mdx  long_horizon.mdx  long_horizon2.html  long_horizon2.html.mdx  long_horizon2.mdx  losses.html  losses.html.mdx  m3.html  m3.html.mdx  m3.mdx  m4.html  m4.html.mdx  m4.mdx  m5.html  m5.html.mdx  m5.mdx  mint.json  phm2008.html  phm2008.html.mdx  phm2008.mdx  (+9 more)
.github/workflows/: build-docs.yaml  ci.yml  deploy.yml  lint.yaml  main.yml  no-response.yaml  pytest.yml  python-publish.yml
action_files/: test_dask.py  test_ray.py  utils.py
datasetsforecast/: __init__.py  _modidx.py  _nbdev.py  evaluation.py  favorita.py  hierarchical.py  long_horizon.py  long_horizon2.py  losses.py  m3.py  m4.py  m5.py  phm2008.py  utils.py
docs/: _config.yml  favorita.html.md  favorita.md  hierarchical.html  hierarchical.html.md  hierarchical.md  long_horizon.html.md  long_horizon.md  long_horizon2.html.md  m3.html.md  m4.html.md  m4.md  m5.html.md  phm2008.html.md  sidebar.json  to_mdx.py  utils.html  utils.html.md  utils.md
docs/_data/sidebars/: home_sidebar.yml
docs/mintlify/: docs.json  mint.json
nbs/: _quarto.yml  evaluation.ipynb  favorita.ipynb  hierarchical.ipynb  index.ipynb  long_horizon.ipynb  long_horizon2.ipynb  losses.ipynb  m3.ipynb  m4.ipynb  m5.ipynb  mint.json  nbdev.yml  phm2008.ipynb  sidebar.yml  utils.ipynb
scripts/: cli.ipynb
tests/: test_favorita.py  test_hierarchical.py  test_index.py  test_long_horizon.py  test_long_horizon2.py  test_m3.py  test_m4.py  test_m5.py  test_phm2008.py  test_utils.py
