[build-system]
requires = ["uv_build>=0.7.19,<1.0.0"]
build-backend = "uv_build"

[project]
name = "datasetsforecast"
version = "1.0.1.dev0"
description = "Datasets for Time series forecasting"
authors = [{name = "Nixtla", email = "business@nixtla.io"}]
license = {text = "MIT License"}
readme = "README.md"
requires-python = ">=3.10"
keywords = ["time-series", "forecasting", "datasets"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
]
dependencies = [
    "aiohttp",
    "numpy",
    "scikit-learn",
    "pandas[plot]<3.0.0",
    "requests",
    "tqdm",
    "utilsforecast>=0.0.8",
    "xlrd>=1.0.0",
]

[dependency-groups]
dev = [
    "pre-commit",
    "pytest",
    "pytest-cov",
    "pytest-asyncio",
    "pip-licenses",
    "mkdocstrings-parser@git+https://github.com/Nixtla/mkdocstrings-parser.git",
    "types-requests>=2.32.4.20260107",
]

[project.urls]
Homepage = "https://github.com/Nixtla/datasetsforecast"
Repository = "https://github.com/Nixtla/datasetsforecast"
Documentation = "https://nixtlaverse.nixtla.io/datasetsforecast/"

[tool.uv.build-backend]
module-root = "."

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = [
    "--cov=datasetsforecast",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-fail-under=60", #TODO: revert to 80 once coverage is improved
]

[tool.coverage.run]
omit = [
    "datasetsforecast/favorita/*"
]
